Feat: Navbar and Landing page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
+@font-face {
+  font-family: "Coco";
+  src: url("../fonts/Coconat-Semi.woff2") format("woff2");
+}
 
 html {
   box-sizing: border-box;
-  @apply bg-tan font-young antialiased;
+  background-color: papayawhip;
+  @apply font-lato antialiased;
 }
+
 *,
 *:before,
 *:after {
